# Ouroboros-Core

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: error.rs  main.rs
src/core/: evolution.rs  mod.rs  query_loop.rs
src/memory/: indexer.rs  mod.rs  semantic_graph.rs  turbo_quant.rs
src/network/: mod.rs  xdp_core.rs
src/reasoning/: candle_bridge.rs  embedding_engine.rs  loop_lm.rs  mod.rs  neural_core.rs
src/swarm/: coordinator.rs  mod.rs  tools.rs
